--- a/pp-03/screen.css
+++ b/pp-03/screen.css
@@ -178,6 +178,27 @@ textarea {
 
 /* ===== BASE STYLES ===== */
 
+html{
+  font-size: 1.125em; /* 18px/16px */
+  line-height: 1.2em; /* 22px ~ 120% */
+  padding: 1.22em;
+  text-rendering: optimizeLegibility;
+}
+
+label{
+  display: block;
+}
+
+input {
+  box-sizing: border-box;
+  height: 2.44em;
+  border: 0;
+  border-radius: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  background-color: #DDD;
+}
 
 /* Responsive Media */
 img, audio, video {
@@ -185,10 +206,7 @@ img, audio, video {
   max-width: 100%;
 }
 
-/* ===== LAYOUT STYLES ===== */
-
-
 /* ===== MODULAR STYLES ===== */
-
-
-/* ===== STATE STYLES ===== */
+form li {
+  padding-bottom: 1.22em; /* 22px / ~ 120% */
+}
